--- a/WebGL-Programming-Guide/Ch2/HelloPoint2.html
+++ b/WebGL-Programming-Guide/Ch2/HelloPoint2.html
@@ -34,8 +34,10 @@
                     console.log("Failed to get the storage location of a_Position");
                     return;
                 }
+                let aPointSize = gl.getAttribLocation(gl.program, "a_PointSize");
                 // gl.vertexAttrib3f(aPosition, 0.0, 0.0, 0.0);
                 gl.vertexAttrib3f(aPosition, 0.3, -0.7, 0.0);
+                gl.vertexAttrib1f(aPointSize, 20.0);
                 gl.clearColor(0.0, 0.0, 0.0, 1.0);
                 gl.clear(gl.COLOR_BUFFER_BIT);
                 gl.drawArrays(gl.POINTS, 0, 1);
