--- a/WebGL-Programming-Guide/Ch5/MultiAttributeSize.html
+++ b/WebGL-Programming-Guide/Ch5/MultiAttributeSize.html
@@ -13,15 +13,16 @@
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
     <script src="../lib/cuon-utils.js"></script>
-    <script src="../lib/cuon-matrix.js"></script>
     <script src="../helpers/constants.js"></script>
     <script src="../helpers/glFileLoader.js"></script>
     <script>
-        let VSHADER_SOURCE = loadShaderSourceCodes(ServerRoot + "RotatingTriangles.vert");
-        let FSHADER_SOURCE = loadShaderSourceCodes(ServerRoot + "MultiPoint.frag");
-
-        const ANGLE_STEP = 45.0;
-
+        // It's very magical that why same contents will cause different result.
+        // In this case, loading MultiAttributeSize.vert will cause commenting line 2.
+        // I cannot explain this situation.
+        // Maybe it's about http protocol? I'm confused.
+        // let VSHADER_SOURCE = loadShaderSourceCodes(ServerRoot + "MultiAttributeSize.vert");
+        let VSHADER_SOURCE = loadShaderSourceCodes(ServerRoot + "MultiAttributeSize1.vert");
+        let FSHADER_SOURCE = loadShaderSourceCodes(ServerRoot + "MultiAttributeSize.frag");
         function main() {
             let canvas = document.getElementById("webgl");
             let gl = getWebGLContext(canvas);
@@ -35,37 +36,31 @@
                 return;
             }
             let numVetices = initVertexBuffers(gl);
-            if(numVetices < 0){
+            if (numVetices < 0) {
                 console.log("Failed to set the positions of the vetices.");
                 return;
             }
             gl.clearColor(0.0, 0.0, 0.0, 1.0);
-            let uModelMatrix = gl.getUniformLocation(gl.program, "u_ModelMatrix");
-            if(!uModelMatrix)
-            {
-                console.log("Failed to get the storage location of u_ModelMatrix.");
-                return;
-            }
-            let currentAngle = 0.0;
-            let modelMatrix = new Matrix4();
-            // Drawing triangle.
-            let tick = () => {
-                currentAngle = animate(currentAngle);   // Update angle.
-                draw(gl, numVetices, currentAngle, modelMatrix, uModelMatrix);
-                requestAnimationFrame(tick);
-            };
-            tick();
+            gl.clear(gl.COLOR_BUFFER_BIT);
+            gl.drawArrays(gl.POINTS, 0, numVetices);
         }
 
-        function initVertexBuffers(gl){
+        function initVertexBuffers(gl) {
             let vertices = new Float32Array([
-                0.0, 0.3, -0.3, -0.3, 0.3, -0.3
+                0.0, 0.5, -0.5, -0.5, 0.5, -0.5
             ]);
+            let verSize = new Float32Array([10.0, 20.0, 30.0]);
             let numVetices = vertices.length / 2;
             // Create buffer object.
             let vertexBuffer = gl.createBuffer();
-            if(!vertexBuffer){
+            let sizeBuffer = gl.createBuffer();
+            if (!vertexBuffer) {
                 console.log("Failed to create the buffer obejct.");
+                return -1;
+            }
+            if(!sizeBuffer)
+            {
+                console.log("Failed to create the size buffer obejct.");
                 return -1;
             }
             // Binding buffer object to target.
@@ -75,37 +70,24 @@
             let aPosition = gl.getAttribLocation(gl.program, "a_Position");
             if (aPosition < 0) {
                 console.log("Failed to get the storage location of a_Position");
-                return;
+                return -1;
             }
             // Assign buffer object to aPosition variable.
             gl.vertexAttribPointer(aPosition, 2, gl.FLOAT, false, 0, 0);
             // Connect variable aPosition to its assigned buffer object.
             gl.enableVertexAttribArray(aPosition);
+            // Write vertex sizes to buffer object and enable the buffer.
+            gl.bindBuffer(gl.ARRAY_BUFFER, sizeBuffer);
+            gl.bufferData(gl.ARRAY_BUFFER, verSize, gl.STATIC_DRAW);
+            let aPointSize = gl.getAttribLocation(gl.program, "a_PointSize");
+            // let aPointSize = gl.getUniformLocation(gl.program, "a_PointSize");
+            if (aPointSize < 0) {
+                console.log("Failed to get the storage location of a_PointSize.");
+                return -1;
+            }
+            gl.vertexAttribPointer(aPointSize, 1, gl.FLOAT, false, 0, 0);
+            gl.enableVertexAttribArray(aPointSize);
             return numVetices;
-        }
-
-        function draw(gl, numVetices, currentAngle, modelMatrix, uModelMatrix){
-            // Set rotation.
-            modelMatrix.setTranslate(0.35, -0.4, 0.0);
-            modelMatrix.rotate(currentAngle, 0, 0, 1);
-            // Pass value to vertex shader.
-            gl.uniformMatrix4fv(uModelMatrix, false, modelMatrix.elements);
-            // Clear <canvas>.
-            gl.clear(gl.COLOR_BUFFER_BIT);
-            // Draw triangle.
-            gl.drawArrays(gl.TRIANGLES, 0, numVetices);
-        }
-
-        // Record last time of calling function.
-        let gLast = Date.now();
-        function animate(angle){
-            // Calculate passed time.
-            let nowTime = Date.now();
-            let elapsed = nowTime - gLast;
-            gLast = nowTime;
-            // Update angle by time elapsed.
-            let newAngle = angle + (ANGLE_STEP * elapsed) / 1000.0;
-            return newAngle % 360;
         }
     </script>
 </body>
