--- a/WebGL-Programming-Guide/Ch7/HelloCube.html
+++ b/WebGL-Programming-Guide/Ch7/HelloCube.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Look At Triangles</title>
+    <title>Hello Cube</title>
 </head>
 
 <body onload="main()">
@@ -17,7 +17,7 @@
     <script src="../helpers/constants.js"></script>
     <script src="../helpers/glFileLoader.js"></script>
     <script>
-        let VSHADER_SOURCE = loadShaderSourceCodes(ServerRoot + "Ch7/PerspectiveView_mvp.vert");
+        let VSHADER_SOURCE = loadShaderSourceCodes(ServerRoot + "Ch7/HelloCube.vert");
         let FSHADER_SOURCE = loadShaderSourceCodes(ServerRoot + "Ch7/LookAtTriangles.frag");
         function main() {
             let canvas = document.getElementById("webgl");
@@ -36,63 +36,51 @@
                 console.log("Failed to set the positions of the vetices.");
                 return;
             }
-            let uViewMatrix = gl.getUniformLocation(gl.program, "u_ViewMatrix");
-            if (!uViewMatrix) {
-                console.log("Failed to get the storage location of u_ViewMatrix");
+            let uMvpMatrix = gl.getUniformLocation(gl.program, "u_MvpMatrix");
+            if (uMvpMatrix === null) {
+                console.log("Failed to get the storage location of u_MvpMatrix");
                 return;
             }
             let viewMatrix = new Matrix4();
-            let uProjMatrix = gl.getUniformLocation(gl.program, "u_ProjMatrix");
-            if (uProjMatrix === null) {
-                console.log("Failed to get the storage location of u_ProjMatrix");
-                return;
-            }
             let projMatrix = new Matrix4();
-            let uModelMatrix = gl.getUniformLocation(gl.program, "u_ModelMatrix");
-            if (uProjMatrix === null) {
-                console.log("Failed to get the storage location of u_ModelMatrix");
-                return;
-            }
-            let modelMatrix = new Matrix4();                        // Set right side triangles' coordinates.
-            viewMatrix.setLookAt(0, 0, 5, 0, 0, -100, 0, 1, 0);
-            projMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100);
-            modelMatrix.setTranslate(0.75, 0, 0);
-            gl.uniformMatrix4fv(uModelMatrix, false, modelMatrix.elements);
-            gl.uniformMatrix4fv(uProjMatrix, false, projMatrix.elements);
-            gl.uniformMatrix4fv(uViewMatrix, false, viewMatrix.elements);
+            let modelMatrix = new Matrix4();
+            let mvpMatrix = new Matrix4();
+            viewMatrix.setLookAt(3, 3, 7, 0, 0, 0, 0, 1, 0);
+            projMatrix.setPerspective(30, 1, 1, 100);
+            modelMatrix.setTranslate(0, 0, 0);
+            mvpMatrix.set(projMatrix).multiply(viewMatrix).multiply(modelMatrix);
+            gl.uniformMatrix4fv(uMvpMatrix, false, mvpMatrix.elements);
             gl.clearColor(0.0, 0.0, 0.0, 1.0);
-            // 开启深度测试，消除隐藏面，解决*1问题。
             gl.enable(gl.DEPTH_TEST);
-            // 清空颜色和深度缓冲区
             gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-            gl.drawArrays(gl.TRIANGLES, 0, numVetices);             // Draw right side triangles.
-            modelMatrix.setTranslate(-0.75, 0, 0);                  // Do same to left side.
-            gl.uniformMatrix4fv(uModelMatrix, false, modelMatrix.elements);
-            gl.drawArrays(gl.TRIANGLES, 0, numVetices);
+            gl.drawElements(gl.TRIANGLES, numVetices, gl.UNSIGNED_BYTE, 0);
         }
 
         function initVertexBuffers(gl) {
-            /**
-            *1.GLSL ES是按照顶点输入到缓冲区的顺序进行渲染，因此虽然蓝黄绿三个三角形虽然是由远到近输入，逻辑上
-            应该绿色盖住黄蓝，但是因为上述特性会出现违背直觉的现象。
-            */
             let verticesColors = new Float32Array([
-                0.0, 1.0, 0.0, 0.4, 0.4, 1.0,  // The front blue one 
-                -0.5, -1.0, 0.0, 0.4, 0.4, 1.0,
-                0.5, -1.0, 0.0, 1.0, 0.4, 0.4,
-
-                0.0, 1.0, -2.0, 1.0, 1.0, 0.4, // The middle yellow one
-                -0.5, -1.0, -2.0, 1.0, 1.0, 0.4,
-                0.5, -1.0, -2.0, 1.0, 0.4, 0.4,
-
-                0.0, 1.0, -4.0, 0.4, 1.0, 0.4, // The back green one
-                -0.5, -1.0, -4.0, 0.4, 1.0, 0.4,
-                0.5, -1.0, -4.0, 1.0, 0.4, 0.4
-            ])
-            const numVetices = 9;
+                // Vertex coordinates and color
+                1.0, 1.0, 1.0, 1.0, 1.0, 1.0,  // v0 White
+                -1.0, 1.0, 1.0, 1.0, 0.0, 1.0,  // v1 Magenta
+                -1.0, -1.0, 1.0, 1.0, 0.0, 0.0,  // v2 Red
+                1.0, -1.0, 1.0, 1.0, 1.0, 0.0,  // v3 Yellow
+                1.0, -1.0, -1.0, 0.0, 1.0, 0.0,  // v4 Green
+                1.0, 1.0, -1.0, 0.0, 1.0, 1.0,  // v5 Cyan
+                -1.0, 1.0, -1.0, 0.0, 0.0, 1.0,  // v6 Blue
+                -1.0, -1.0, -1.0, 0.0, 0.0, 0.0   // v7 Black
+            ]);
+            // Indices of the vertices
+            let indices = new Uint8Array([
+                0, 1, 2, 0, 2, 3,    // front
+                0, 3, 4, 0, 4, 5,    // right
+                0, 5, 6, 0, 6, 1,    // up
+                1, 6, 7, 1, 7, 2,    // left
+                7, 4, 3, 7, 3, 2,    // down
+                4, 7, 6, 4, 6, 5     // back
+            ]);
             // Create buffer object.
             let vertexColorBuffer = gl.createBuffer();
-            if (!vertexColorBuffer) {
+            let indexBuffer = gl.createBuffer();
+            if (!(vertexColorBuffer && indexBuffer)) {
                 console.log("Failed to create the buffer obejct.");
                 return -1;
             }
@@ -101,6 +89,7 @@
             // Write data to buffer object.
             gl.bufferData(gl.ARRAY_BUFFER, verticesColors, gl.STATIC_DRAW);
             const FSIZE = verticesColors.BYTES_PER_ELEMENT;
+            // Assign vertex coordinate data in buffer to a_Position and enable it.
             let aPosition = gl.getAttribLocation(gl.program, "a_Position");
             if (aPosition < 0) {
                 console.log("Failed to get the storage location of a_Position");
@@ -117,7 +106,10 @@
             gl.enableVertexAttribArray(aColor);
             // Unbind the buffer object.
             gl.bindBuffer(gl.ARRAY_BUFFER, null);
-            return numVetices;
+            gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer);
+            gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, indices, gl.STATIC_DRAW);
+            // gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, null);
+            return indices.length;
         }
     </script>
 </body>
