--- a/WebGL-Programming-Guide/Ch9/JointModel.html
+++ b/WebGL-Programming-Guide/Ch9/JointModel.html
@@ -51,7 +51,7 @@
             }
             let viewProjMatrix = new Matrix4();
             viewProjMatrix.setPerspective(50.0, 1.0, 1.0, 100.0);
-            viewProjMatrix.lootAt(20.0, 10.0, 30.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0);
+            viewProjMatrix.lookAt(20.0, 10.0, 30.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0);
             document.onkeydown = (ev) => keydown(ev, gl, numVetices, viewProjMatrix, uMvpMatrix, uNormalMatrix);
             draw(gl, numVetices, viewProjMatrix, uMvpMatrix, uNormalMatrix);
         }
@@ -62,10 +62,10 @@
 
         function keydown(ev, gl, numVetices, viewProjMatrix, uMvpMatrix, uNormalMatrix){
             switch(ev.keyCode){
-                case 38: gJoint1Angle = gJoint1Angle + gJoint1Angle < 135.0 ? ANGLE_STEP : 0; break;
-                case 40: gJoint1Angle = gJoint1Angle - gJoint1Angle > -135.0 ? ANGLE_STEP : 0; break;
-                case 39: gArm1Angle = (gArm1Angle + ANGLE_STEP) % 360; break;
-                case 37: gArm1Angle = (gArm1Angle - ANGLE_STEP) % 360; break;
+                /*↑*/case 38: gJoint1Angle = gJoint1Angle + (gJoint1Angle < 135.0 ? ANGLE_STEP : 0); break;
+                /*↓*/case 40: gJoint1Angle = gJoint1Angle - (gJoint1Angle > -135.0 ? ANGLE_STEP : 0); break;
+                /*→*/case 39: gArm1Angle = (gArm1Angle + ANGLE_STEP) % 360; break;
+                /*←*/case 37: gArm1Angle = (gArm1Angle - ANGLE_STEP) % 360; break;
                 default: return;
             }
             draw(gl, numVetices, viewProjMatrix, uMvpMatrix, uNormalMatrix);
@@ -102,16 +102,12 @@
                 20, 21, 22, 20, 22, 23     // back
             ]);
             // Create buffer object.
-            let vertexColorBuffer = gl.createBuffer();
             let indexBuffer = gl.createBuffer();
             if (!indexBuffer) {
                 console.log("Failed to create the buffer obejct.");
                 return -1;
             }
             if (!initArrayBuffer(gl, vertices, 3, gl.FLOAT, "a_Position")) {
-                return -1;
-            }
-            if (!initArrayBuffer(gl, colors, 3, gl.FLOAT, "a_Color")) {
                 return -1;
             }
             if (!initArrayBuffer(gl, normals, 3, gl.FLOAT, "a_Normal")) {
@@ -140,6 +136,35 @@
             gl.vertexAttribPointer(aAttribute, num, type, false, 0, 0);
             gl.enableVertexAttribArray(aAttribute);
             return true;
+        }
+
+        let gModelMatrix = new Matrix4();
+        let gMvpMatrix = new Matrix4();
+        
+        function draw(gl, num, viewProjMatrix, uMvpMatrix, uNormalMatrix){
+            gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+            let arm1Length = 10.0;
+            // Arm1，上臂
+            gModelMatrix.setTranslate(0.0, -12.0, 0.0);
+            gModelMatrix.rotate(gArm1Angle, 0.0, 1.0, 0.0);
+            drawBox(gl, num, viewProjMatrix, uMvpMatrix, uNormalMatrix);
+            // Arm2，下臂
+            gModelMatrix.translate(0.0, arm1Length, 0.0);
+            gModelMatrix.rotate(gJoint1Angle, 0.0, 0.0, 1.0);
+            gModelMatrix.scale(1.3, 1.0, 1.3);
+            drawBox(gl, num, viewProjMatrix, uMvpMatrix, uNormalMatrix);
+        }
+
+        let gNormalMatrix = new Matrix4();
+
+        function drawBox(gl, num, viewProjMatrix, uMvpMatrix, uNormalMatrix){
+            gMvpMatrix.set(viewProjMatrix);
+            gMvpMatrix.multiply(gModelMatrix);
+            gl.uniformMatrix4fv(uMvpMatrix, false, gMvpMatrix.elements);
+            gNormalMatrix.setInverseOf(gModelMatrix);
+            gNormalMatrix.transpose();
+            gl.uniformMatrix4fv(uNormalMatrix, false, gNormalMatrix.elements);
+            gl.drawElements(gl.TRIANGLES, num, gl.UNSIGNED_BYTE, 0);
         }
     </script>
 </body>
