--- a/WebGL-Programming-Guide/Ch9/MultiJointModel.html
+++ b/WebGL-Programming-Guide/Ch9/MultiJointModel.html
@@ -50,7 +50,7 @@
                 return;
             }
             let viewProjMatrix = new Matrix4();
-            viewProjMatrix.setPerspective(50.0, 1.0, 1.0, 100.0);
+            viewProjMatrix.setPerspective(50.0, canvas.width / canvas.height, 1.0, 100.0);
             viewProjMatrix.lookAt(20.0, 10.0, 30.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0);
             document.onkeydown = (ev) => keydown(ev, gl, numVetices, viewProjMatrix, uMvpMatrix, uNormalMatrix);
             draw(gl, numVetices, viewProjMatrix, uMvpMatrix, uNormalMatrix);
@@ -62,15 +62,15 @@
         let gJoint2Angle = 0.0;
         let gJoint3Angle = 0.0;
 
-        function keydown(ev, gl, numVetices, viewProjMatrix, uMvpMatrix, uNormalMatrix){
-            switch(ev.keyCode){
+        function keydown(ev, gl, numVetices, viewProjMatrix, uMvpMatrix, uNormalMatrix) {
+            switch (ev.keyCode) {
                 /*↑*/case 38: gJoint1Angle = gJoint1Angle + (gJoint1Angle < 135.0 ? ANGLE_STEP : 0); break;
                 /*↓*/case 40: gJoint1Angle = gJoint1Angle - (gJoint1Angle > -135.0 ? ANGLE_STEP : 0); break;
                 /*→*/case 39: gArm1Angle = (gArm1Angle + ANGLE_STEP) % 360; break;
                 /*←*/case 37: gArm1Angle = (gArm1Angle - ANGLE_STEP) % 360; break;
-                /*z*/case 90: gJoint2Angle = (gJoint2Angle + ANGLE_STEP) % 360 ; break;
+                /*z*/case 90: gJoint2Angle = (gJoint2Angle + ANGLE_STEP) % 360; break;
                 /*x*/case 88: gJoint2Angle = (gJoint2Angle - ANGLE_STEP) % 360; break;
-                /*v*/case 86: gJoint3Angle = (gJoint3Angle < 60.0) ? (gJoint3Angle + ANGLE_STEP) % 360 : gJoint3Angle;break;
+                /*v*/case 86: gJoint3Angle = (gJoint3Angle < 60.0) ? (gJoint3Angle + ANGLE_STEP) % 360 : gJoint3Angle; break;
                 /*c*/case 67: gJoint3Angle = (gJoint3Angle > -60.0) ? (gJoint3Angle - ANGLE_STEP) % 360 : gJoint3Angle; break;
                 default: return;
             }
@@ -80,12 +80,12 @@
         function initVertexBuffers(gl) {
             // Vertex coordinates（a cuboid 3.0 in width, 10.0 in height, and 3.0 in length with its origin at the center of its bottom)
             var vertices = new Float32Array([
-                1.5, 10.0, 1.5, -1.5, 10.0, 1.5, -1.5, 0.0, 1.5, 1.5, 0.0, 1.5, // v0-v1-v2-v3 front
-                1.5, 10.0, 1.5, 1.5, 0.0, 1.5, 1.5, 0.0, -1.5, 1.5, 10.0, -1.5, // v0-v3-v4-v5 right
-                1.5, 10.0, 1.5, 1.5, 10.0, -1.5, -1.5, 10.0, -1.5, -1.5, 10.0, 1.5, // v0-v5-v6-v1 up
-                -1.5, 10.0, 1.5, -1.5, 10.0, -1.5, -1.5, 0.0, -1.5, -1.5, 0.0, 1.5, // v1-v6-v7-v2 left
-                -1.5, 0.0, -1.5, 1.5, 0.0, -1.5, 1.5, 0.0, 1.5, -1.5, 0.0, 1.5, // v7-v4-v3-v2 down
-                1.5, 0.0, -1.5, -1.5, 0.0, -1.5, -1.5, 10.0, -1.5, 1.5, 10.0, -1.5  // v4-v7-v6-v5 back
+                0.5, 1.0, 0.5, -0.5, 1.0, 0.5, -0.5, 0.0, 0.5, 0.5, 0.0, 0.5, // v0-v1-v2-v3 front
+                0.5, 1.0, 0.5, 0.5, 0.0, 0.5, 0.5, 0.0, -0.5, 0.5, 1.0, -0.5, // v0-v3-v4-v5 right
+                0.5, 1.0, 0.5, 0.5, 1.0, -0.5, -0.5, 1.0, -0.5, -0.5, 1.0, 0.5, // v0-v5-v6-v1 up
+                -0.5, 1.0, 0.5, -0.5, 1.0, -0.5, -0.5, 0.0, -0.5, -0.5, 0.0, 0.5, // v1-v6-v7-v2 left
+                -0.5, 0.0, -0.5, 0.5, 0.0, -0.5, 0.5, 0.0, 0.5, -0.5, 0.0, 0.5, // v7-v4-v3-v2 down
+                0.5, 0.0, -0.5, -0.5, 0.0, -0.5, -0.5, 1.0, -0.5, 0.5, 1.0, -0.5  // v4-v7-v6-v5 back
             ]);
 
             // Normal
@@ -107,6 +107,7 @@
                 16, 17, 18, 16, 18, 19,    // down
                 20, 21, 22, 20, 22, 23     // back
             ]);
+            gl.bindBuffer(gl.ARRAY_BUFFER, null);
             // Create buffer object.
             let indexBuffer = gl.createBuffer();
             if (!indexBuffer) {
@@ -146,11 +147,11 @@
 
         let gModelMatrix = new Matrix4();
         let gMvpMatrix = new Matrix4();
-        
-        function draw(gl, num, viewProjMatrix, uMvpMatrix, uNormalMatrix){
+
+        function draw(gl, num, viewProjMatrix, uMvpMatrix, uNormalMatrix) {
             gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
             // Base
-            let baseHeight = 2.0;
+            const baseHeight = 2.0;
             gModelMatrix.setTranslate(0.0, -12.0, 0.0);
             drawBox(gl, num, 10.0, baseHeight, 10.0, viewProjMatrix, uMvpMatrix, uNormalMatrix);
             // Arm1，上臂
@@ -165,20 +166,29 @@
             // gModelMatrix.scale(1.3, 1.0, 1.3);
             drawBox(gl, num, 4.0, arm2Length, 4.0, viewProjMatrix, uMvpMatrix, uNormalMatrix);
             // APalm
-            let palmLength = 2.0;
+            const palmLength = 2.0;
             gModelMatrix.translate(0.0, arm2Length, 0.0);
             gModelMatrix.rotate(gJoint2Angle, 0.0, 1.0, 0.0);
             drawBox(gl, num, 2.0, palmLength, 6.0, viewProjMatrix, uMvpMatrix, uNormalMatrix);
-            // 移到palm中的一端
+            // 移动手指
             gModelMatrix.translate(0.0, palmLength, 0.0);
+            // 绘画手指1
             pushMatrix(gModelMatrix);
             gModelMatrix.translate(0.0, 0.0, 2.0);
-            gModelMatrix.rotate(gJoint3Angle, 1.0, 0.0, 0.0);
+            gModelMatrix.rotate(gJoint3Angle, 1.0, 0.0, 0.0);  // Rotate around the x-axis
+            drawBox(gl, num, 1.0, 2.0, 1.0, viewProjMatrix, uMvpMatrix, uNormalMatrix);
+            gModelMatrix = popMatrix();
+            // 绘画手指2
+            gModelMatrix.translate(0.0, 0.0, -2.0);
+            gModelMatrix.rotate(-gJoint3Angle, 1.0, 0.0, 0.0);  // Rotate around the x-axis
+            drawBox(gl, num, 1.0, 2.0, 1.0, viewProjMatrix, uMvpMatrix, uNormalMatrix);
         }
 
         let gNormalMatrix = new Matrix4();
 
-        function drawBox(gl, num, viewProjMatrix, uMvpMatrix, uNormalMatrix){
+        function drawBox(gl, num, width, height, depth, viewProjMatrix, uMvpMatrix, uNormalMatrix) {
+            pushMatrix(gModelMatrix);
+            gModelMatrix.scale(width, height, depth);
             gMvpMatrix.set(viewProjMatrix);
             gMvpMatrix.multiply(gModelMatrix);
             gl.uniformMatrix4fv(uMvpMatrix, false, gMvpMatrix.elements);
@@ -186,6 +196,17 @@
             gNormalMatrix.transpose();
             gl.uniformMatrix4fv(uNormalMatrix, false, gNormalMatrix.elements);
             gl.drawElements(gl.TRIANGLES, num, gl.UNSIGNED_BYTE, 0);
+            gModelMatrix = popMatrix();
+        }
+
+        let gMatrixStack = [];
+        function pushMatrix(m) {
+            let m2 = new Matrix4(m);
+            gMatrixStack.push(m2);
+        }
+
+        function popMatrix() {
+            return gMatrixStack.pop();
         }
     </script>
 </body>
